# rust_sim_with_gpt

./: README.md
docs/: ECS版ソフトウェア基本設計書のためのプロンプト.md  Rust シミュレーション.md  RustECS シミュレーション 題材.md  Rustによる物理シミュレーション.md  シミュレーション演算仕様書.md  シミュレーション要件定義.md
mslsim/: Cargo.toml  物理演算サンプル.md
mslsim/src/: main.rs
mslsim/src/config/: mod.rs  parameters.rs  scenario.rs
mslsim/src/math/: error.rs  filter.rs  integrator.rs  mod.rs
mslsim/src/models/: interceptor.rs  missile.rs  mod.rs  motion.rs  radar.rs
mslsim/src/simulation/: csv.rs  framework.rs  load_parameters.rs  mod.rs
mslsim3/: Cargo.toml  コーディング.md  コーディングプロンプト.md  シミュレーション要件定義.md  ソフトウェア基本設計書.md  ソフトウェア基本設計書のためのプロンプト.md  ソフトウェア要求仕様.md
mslsim3/config/: interceptor_params.yaml  missile_params.yaml  radar_params.yaml  scenario.yaml
mslsim3/src/: main.rs
mslsim3/src/math/: integrator.rs  low_pass_filter.rs  mod.rs
mslsim3/src/models/: interceptor.rs  missile.rs  mod.rs  radar.rs
mslsim3/src/utils/: mod.rs  yaml_parser.rs
mslsim_ecs/: コーディングプロンプト.md  ソフトウェア基本設計書.md
