[package]
name = "mslsim"
version = "0.1.0"
edition = "2021"

# プロジェクトの依存関係
[dependencies]
serde = { version = "1.0", features = ["derive"] }      # シリアライズ/デシリアライズ
serde_yaml = "0.9"                                     # YAMLファイルの読み込み
thiserror = "1.0"                                      # エラーハンドリング

# テスト時にのみ必要な依存関係
[dev-dependencies]
# 必要に応じて追加